# Real-Time-Embedded-Condition-Monitoring-System

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LICENSE  PHASE3B_QUICKSTART.md  README.md  RESUME_READY_CHECKLIST.md  STM32H563xx_FLASH.ld  platformio.ini  smart_safe.ioc  toolchain-arm-none-eabi.cmake
Core/Inc/: FreeRTOSConfig.h  actuator_driver.h  app_freertos.h  display_task.h  display_ui.h  feature_extraction.h  generated_iforest_model.h  lis3dh_driver.h  lis3dsh_driver.h  main.h  ml_model.h  security_policy.h  ssd1306_driver.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  vl53l1x_driver.h
Core/Src/: actuator_driver.c  app_freertos.c  display_task.c  display_ui.c  feature_extraction.c  generated_iforest_model.c  lis3dh_driver.c  lis3dsh_driver.c  main.c  ml_model.c  security_policy.c  ssd1306_driver.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  vl53l1x_driver.c
Drivers/VL53L1X_API/API/platform/inc/: vl53l1_platform.h
Drivers/VL53L1X_API/API/platform/src/: vl53l1_platform.c
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: demo_assets.md  fault_handling.md  hardware_validation_matrix.md  performance_budget.md  resource_usage.md  resume_bullets.md  security_model.md  static_analysis.md  validation_report.md
ld/: STM32H563ZI_FLASH.ld
tools/: .gitignore  README.md  collect_training_data.py  export_iforest_to_c.py  test_security_policy.py  train_anomaly_model.py
